# ATP-ex04

./: BooleanMasks.cpp  BooleanMasks.h  CMakeLists.txt  Constraints.h  Groups.cpp  Groups.h  PuzzlePiece.cpp  PuzzlePiece.h  ex4headers.h  main.cpp  makefile  students.txt
